--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "first",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "first.js",
+  "type": "module",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.0.6"
   }
 }
